[swagger]: fix errors
