# docs/swagger.json
@@ -29,13 +29,27 @@
           "artistName": { "type": "string" }
         }
       },
+      "ProfileToShow": {
+        "type": "object",
+        "properties": {
+          "user": {
+            "type": "object",
+            "properties": {
+              "id": { "$ref": "#/components/schemas/User/properties/id" },
+              "name": { "$ref": "#/components/schemas/User/properties/name" },
+              "image": { "type": "string" }
+            }
+          },
+          "songs": { "type": "array", "items": { "$ref": "#/components/schemas/Track" } }
+        }
+      },
       "SerializedUser": {
         "type": "object",
         "properties": {
           "id": { "type": "string" },
           "name": { "type": "string" },
           "email": { "type": "string" },
-          "dateOfBirth": { "type": "DateTime" },
+          "dateOfBirth": { "type": "string", "format": "date-time" },
           "description": { "type": "string" },
           "avatarUrl": { "type": "string" },
           "genderId": { "type": "string" },
@@ -47,16 +61,16 @@
         "properties": {
           "id": { "type": "number" },
           "name": { "type": "string" },
-          "createdAt": { "type": "DateTime" },
-          "updatedAt": { "type": "DateTime" }
+          "createdAt": { "type": "string", "format": "date-time" },
+          "updatedAt": { "type": "string", "format": "date-time" }
         }
       },
       "Match": {
         "type": "object",
         "properties": {
           "id": { "type": "string" },
-          "createdAt": { "type": "DateTime" },
-          "updatedAt": { "type": "DateTime" },
+          "createdAt": { "type": "string", "format": "date-time" },
+          "updatedAt": { "type": "string", "format": "date-time" },
           "matcherUserId": { "type": "string" },
           "matchedUserId": { "type": "string" }
         }
@@ -65,8 +79,8 @@
         "type": "object",
         "properties": {
           "id": { "type": "string" },
-          "createdAt": { "type": "DateTime" },
-          "updatedAt": { "type": "DateTime" },
+          "createdAt": { "type": "string", "format": "date-time" },
+          "updatedAt": { "type": "string", "format": "date-time" },
           "matcherUserId": { "type": "string" },
           "matchedUserId": { "type": "string" }
         }
@@ -75,10 +89,10 @@
         "type": "object",
         "properties": {
           "id": { "type": "string" },
-          "dateOfBirth": { "type": "DateTime" },
+          "dateOfBirth": { "type": "string", "format": "date-time" },
           "description": { "type": "string" },
-          "createdAt": { "type": "DateTime" },
-          "updatedAt": { "type": "DateTime" },
+          "createdAt": { "type": "string", "format": "date-time" },
+          "updatedAt": { "type": "string", "format": "date-time" },
           "preferedGender": { "type": "number" },
           "gender": { "type": "number" },
           "userId": { "type": "string" }
@@ -93,8 +107,8 @@
           "spotifyUri": { "type": "string" },
           "spotifyImage": { "type": "string" },
           "spotifyId": { "type": "string" },
-          "createdAt": { "type": "DateTime" },
-          "updatedAt": { "type": "DateTime" },
+          "createdAt": { "type": "string", "format": "date-time" },
+          "updatedAt": { "type": "string", "format": "date-time" },
           "userId": { "type": "string" }
         }
       },
@@ -104,8 +118,8 @@
           "id": { "type": "string" },
           "name": { "type": "string" },
           "email": { "type": "string" },
-          "createdAt": { "type": "DateTime" },
-          "updatedAt": { "type": "DateTime" },
+          "createdAt": { "type": "string", "format": "date-time" },
+          "updatedAt": { "type": "string", "format": "date-time" },
           "profileId": { "type": "string" }
         }
       }
@@ -164,7 +178,6 @@
         "summary": "fav an user",
         "security": [{ "bearerAuth": [] }],
         "tags": ["Match"],
-        "produces": ["application/json"],
         "responses": {
           "200": {
             "description": "Success",
@@ -197,7 +210,6 @@
         "summary": "get user spotify top five tracks",
         "security": [{ "bearerAuth": [] }],
         "tags": ["Match"],
-        "produces": ["application/json"],
         "responses": {
           "200": {
             "description": "Success",
@@ -225,7 +237,6 @@
         "summary": "fav an user",
         "security": [{ "bearerAuth": [] }],
         "tags": ["User"],
-        "produces": ["application/json"],
         "parameters": [
           {
             "in": "path",
@@ -258,7 +269,6 @@
       "get": {
         "security": [{ "bearerAuth": [] }],
         "tags": ["User"],
-        "produces": ["application/json"],
         "responses": {
           "200": {
             "description": "Success",
@@ -267,15 +277,10 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "user": {
-                      "type": "object",
-                      "properties": {
-                        "id": { "$ref": "#/components/schemas/User/properties/id" },
-                        "name": { "$ref": "#/components/schemas/User/properties/name" },
-                        "image": { "type": "string" }
-                      }
-                    },
-                    "songs": { "type": "array", "items": { "$ref": "#/components/schemas/Track" } }
+                    "data": {
+                      "type": "array",
+                      "items": { "$ref": "#/components/schemas/ProfileToShow" }
+                    }
                   }
                 }
               }
@@ -289,7 +294,6 @@
       "get": {
         "security": [{ "bearerAuth": [] }],
         "tags": ["Auth"],
-        "produces": ["application/json"],
         "responses": {
           "200": { "description": "Success" },
           "401": { "$ref": "#/components/responses/UnAuthorizedException" }
@@ -300,7 +304,6 @@
       "get": {
         "security": [{ "bearerAuth": [] }],
         "tags": ["Auth"],
-        "produces": ["application/json"],
         "responses": {
           "200": {
             "description": "Success",
@@ -314,7 +317,6 @@
       "post": {
         "security": [{ "bearerAuth": [] }],
         "tags": ["Auth"],
-        "produces": ["application/json"],
         "responses": {
           "200": {
             "description": "Success",
@@ -330,7 +332,6 @@
       "post": {
         "security": [{ "bearerAuth": [] }],
         "tags": ["Auth"],
-        "produces": ["application/json"],
         "responses": {
           "200": {
             "description": "Success",
@@ -342,7 +343,9 @@
         }
       }
     },
-    "/api/auth/spotify": { "get": { "tags": ["Spotify OAuth"] } }
+    "/api/auth/spotify": {
+      "get": { "tags": ["Spotify OAuth"], "responses": { "200": { "description": "Success" } } }
+    }
   },
   "tags": []
 }
